Refactoring: Move JavaKernel init logic from constructor to Builder #82