@@ -5,6 +5,14 @@ import com.google.gson.JsonParser;
 import org.dflib.jjava.jupyter.channels.JupyterConnection;
 import org.dflib.jjava.jupyter.channels.JupyterSocket;
 import org.dflib.jjava.jupyter.kernel.KernelConnectionProperties;
+import org.dflib.jjava.magics.ClasspathMagic;
+import org.dflib.jjava.magics.JarsMagic;
+import org.dflib.jjava.magics.LoadCodeMagic;
+import org.dflib.jjava.magics.LoadFromPomCellMagic;
+import org.dflib.jjava.magics.LoadFromPomLineMagic;
+import org.dflib.jjava.magics.MavenMagic;
+import org.dflib.jjava.magics.MavenRepoMagic;
+import org.dflib.jjava.maven.MavenDependencyResolver;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -21,28 +29,41 @@ public class JJava {
 
     private static final String KERNEL_METADATA_FILE = "jjava-kernel-metadata.json";
 
-    private static JavaKernel kernel;
+    private static JJavaKernel kernel;
 
     public static void main(String[] args) throws Exception {
         if (args.length < 1) {
             throw new IllegalArgumentException("Missing connection file argument");
         }
 
-        String version = loadKernelVersion();
-
         Path connectionFile = Paths.get(args[0]);
         if (!Files.isRegularFile(connectionFile)) {
             throw new IllegalArgumentException("Connection file '" + connectionFile + "' isn't a file.");
         }
 
-        String contents = new String(Files.readAllBytes(connectionFile));
+        String contents = Files.readString(connectionFile);
 
         JupyterSocket.JUPYTER_LOGGER.setLevel(Level.WARNING);
 
         KernelConnectionProperties connProps = KernelConnectionProperties.parse(contents);
         JupyterConnection connection = new JupyterConnection(connProps);
 
-        kernel = new JavaKernel(version);
+        MavenDependencyResolver mavenResolver = new MavenDependencyResolver();
+
+        kernel = JJavaKernel.builder()
+                .version(loadKernelVersion())
+
+                .lineMagic("load", new LoadCodeMagic("", ".jsh", ".jshell", ".java", ".jjava"))
+                .lineMagic("classpath", new ClasspathMagic())
+                .lineMagic("maven", new MavenMagic(mavenResolver))
+                .lineMagic("mavenRepo", new MavenRepoMagic(mavenResolver))
+                .lineMagic("loadFromPOM", new LoadFromPomLineMagic(mavenResolver))
+                .lineMagic("jars", new JarsMagic()) // TODO: deprecate redundant "jars" alias; "classpath" is a superset of this
+                .lineMagic("addMavenDependency", new MavenMagic(mavenResolver)) // TODO: deprecate redundant "addMavenDependency" alias
+                .cellMagic("loadFromPOM", new LoadFromPomCellMagic(mavenResolver))
+
+                .build();
+
         kernel.becomeHandlerForConnection(connection);
 
         connection.connect();
@@ -52,7 +73,7 @@ public class JJava {
     /**
      * Returns the kernel instance created in {@link #main(String[])}.
      */
-    public static JavaKernel getKernelInstance() {
+    public static JJavaKernel getKernelInstance() {
         return JJava.kernel;
     }
 
